<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_leaderboards"
        android:icon="@drawable/menu_item_leaderboards"
        android:iconTint="@color/altText"
        android:title="@string/menu_leaderboards"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/menu_icon_about"
        android:iconTint="@color/altText"
        android:title="@string/menu_about"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/menu_icon_settings"
        android:iconTint="@color/altText"
        android:title="@string/menu_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sign_out"
        android:icon="@drawable/menu_icon_logout"
        android:iconTint="@color/altText"
        android:title="@string/menu_logout"
        app:showAsAction="always" />

</menu>