<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <EditText
        android:id="@+id/email_editText_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_edittext"
        android:textColor="@color/altText"
        android:textColorHint="@color/altText"
        android:ems="10"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="email"/>

    <EditText
        android:id="@+id/password_editText_login"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_edittext"
        android:textColor="@color/altText"
        android:textColorHint="@color/altText"
        android:ems="10"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="@+id/email_editText_login"
        app:layout_constraintStart_toStartOf="@+id/email_editText_login"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_login"
        android:autofillHints="password" />

    <Button
        android:id="@+id/login_button_login"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/round_button"
        android:text="@string/login_login_button"
        android:textColor="@color/mainBackground"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_login"
        app:layout_constraintStart_toStartOf="@+id/password_editText_login"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_login" />

    <TextView
        android:id="@+id/dont_have_account_textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_no_account"
        android:textColor="@color/mainText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/login_button_login"
        app:layout_constraintStart_toStartOf="@+id/login_button_login"
        app:layout_constraintTop_toBottomOf="@+id/login_button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>