<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@color/pokemonNotRegistered">

    <ImageView
        android:id="@+id/pokemonImage_imageView_pokedex"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/pokedex_pokemon_image_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pokemonId_textView_pokedex"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/pokemonName_textView_pokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokedex_pokemon_name"
        android:textColor="@color/mainText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pokemonImage_imageView_pokedex"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pokemonImage_imageView_pokedex"
        app:layout_constraintVertical_bias="0.545" />


    <TextView
        android:id="@+id/pokemonId_textView_pokedex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/pokedex_pokemon_id"
        app:layout_constraintBottom_toBottomOf="@+id/pokemonImage_imageView_pokedex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pokemonImage_imageView_pokedex" />

</androidx.constraintlayout.widget.ConstraintLayout>